[tool.poetry]
name = "fastapi-logging-middleware"
version = "0.1.0"
description = "Allows logging the data received in the request and sent in the response."
authors = ["Ilichev Andrey <ilichev.andrey.y@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/ilichev-andrey/fastapi-logging-middleware"
repository = "https://github.com/ilichev-andrey/fastapi-logging-middleware"
documentation = "https://github.com/ilichev-andrey/fastapi-logging-middleware"
keywords = ["fastapi", "logger", "logging", "middleware"]
packages = [
    { include = "fastapi_logging_middleware" }
]
include = ["LICENSE", "README.md"]

[tool.poetry.dependencies]
python = "^3.8.1"
orjson = "^3.9.10"

[tool.poetry.group.dev.dependencies]
fastapi = "*"
uvicorn = "*"
python-multipart = "*"

[tool.poetry.group.linting]
optional = true

[tool.poetry.group.linting.dependencies]
wemake-python-styleguide = "^0.18.0"
flake8-class-attributes-order = "^0.1.3"
flake8-fastapi = "^0.7.0"
flake8-pytest = "^1.4"
flake8-pytest-style = "^1.7.2"

[tool.poetry.group.testing]
optional = true

[tool.poetry.group.testing.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-dotenv = "^0.5.2"
pytest-asyncio = "^0.20.3"
freezegun = "^1.2.2"
pytest-unordered = "^0.5.2"
httpx = "^0.25.1"

[tool.poetry.group.distributing]
optional = true

[tool.poetry.group.distributing.dependencies]
twine = "^4.0.2"

[[tool.poetry.source]]
name = "nexus-stsoft"
url = "https://helm.stsoft.dev/repository/pypi/simple/"
default = false
secondary = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.mypy]
# The mypy configuration: https://mypy.readthedocs.io/en/latest/config_file.html
# TOML configuration: https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
files = ["."]
python_version = "3.8"
# equivalent of --strict
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
strict_concatenate = true
# information about exclude: https://mypy.readthedocs.io/en/latest/config_file.html#confval-exclude
# TOML's double-quoted strings require escaping backslashes but Tomi's single-quoted strings do not
exclude = []

[tool.coverage.report]
# https://coverage.readthedocs.io/en/latest/config.html
skip_empty = true
skip_covered = true

[tool.coverage.run]
branch = true
relative_files = true
omit = []

[tool.coverage.paths]
source = [
    "fastapi_logging_middleware",
]